Implement contact-view component

--- a/src/app/layout/contact-view/contact-view.component.html
+++ b/src/app/layout/contact-view/contact-view.component.html
@@ -1,1 +1,4 @@
-<p>contact-view works!</p>
+<div *ngIf="contact$ | async as contact">
+  <h1>{{ contact.firstName }} {{ contact.lastName }}</h1>
+  <div>{{ contact.street }} {{ contact.city }}</div>
+</div>
